# lecture

./: CMakeLists.txt  a.txt  colors.h  glh.h  level.cpp  level.h  main.cpp  output.h  render.cpp  render.h  rotatingcolors.fsh  rotatingverts.vsh  text.cpp  text.h
libs/glad/: glad.c  glad.h
libs/glfw/include/GLFW/: glfw3.h
libs/glfw/src/: context.c  input.c  win32_window.c
libs/glm/: manual.md
libs/glm/glm/ext/: matrix_transform.inl
libs/glm/glm/gtc/: noise.inl
libs/stb/: stb_image.h  stb_truetype.h
res/: fragdemo.frag  fragdemo.vert  raymarching.frag  sphere.frag  sphere.vert  text.frag  text.vert  vertdemo.frag  vertdemo.vert
